<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/LoginFragment">

    <fragment
        android:id="@+id/LoginFragment"
        android:name="com.example.labfirebase.LoginRegisterFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_LoginFragment_to_SensorFragment"
            app:destination="@id/SensorFragment" />
    </fragment>
    <fragment
        android:id="@+id/SensorFragment"
        android:name="com.example.labfirebase.SensorFragment"
        android:label="@string/sensor_fragment_label"
        tools:layout="@layout/fragment_sensor">
        <action
            android:id="@+id/action_SensorFragment_to_databaseFragment"
            app:destination="@id/databaseFragment" />
    </fragment>
    <fragment
        android:id="@+id/databaseFragment"
        android:name="com.example.labfirebase.DatabaseFragment"
        android:label="@string/database_fragment_label"
        tools:layout="@layout/fragment_database_list" >
        <argument
            android:name="sensorType"
            app:argType="string" />
    </fragment>
</navigation>